# PaperCoach

./: .env.example  .gitignore  AGENT.md  PaperCoach.md  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
papercoach/: __init__.py  __main__.py  app.py  cli.py  config.py  errors.py
papercoach/agents/: __init__.py  blog_builder.py  evaluator.py  navigator.py  prompts.py  question_generator.py
papercoach/api/: __init__.py
papercoach/api/routes/: papers.py  sessions.py
papercoach/core/: __init__.py  constants.py  ids.py
papercoach/schemas/: __init__.py  papers.py  sessions.py
papercoach/services/: __init__.py  llm.py  paper_service.py  pdf_parser.py  retrieval.py  session_service.py
papercoach/storage/: __init__.py  json_store.py
papercoach/web/: __init__.py  app.js  index.html  styles.css
tests/: test_agent_prompts.py  test_api.py  test_llm_config.py  test_parser.py  test_retrieval.py  test_session_service.py
