[build-system]
requires = ["setuptools>=69.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "papercoach"
version = "0.1.0"
description = "A Socratic Python agent for guided research paper understanding."
readme = "PaperCoach.md"
requires-python = ">=3.11,<3.13"
dependencies = [
  "fastapi>=0.111,<1.0",
  "uvicorn[standard]>=0.30,<1.0",
  "pydantic>=2.7,<3.0",
  "pydantic-settings>=2.3,<3.0",
  "python-multipart>=0.0.9,<1.0",
  "PyMuPDF>=1.24,<2.0",
  "typing-extensions>=4.12,<5.0",
  "openai>=1.35,<3.0"
]

[project.optional-dependencies]
dev = [
  "httpx>=0.27,<1.0",
  "pytest>=8.2,<9.0",
  "ruff>=0.5,<1.0",
  "mypy>=1.10,<2.0"
]

[project.scripts]
papercoach = "papercoach.cli:main"

[tool.setuptools.packages.find]
include = ["papercoach*"]

[tool.setuptools.package-data]
papercoach = ["web/*.html", "web/*.css", "web/*.js"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
